--- a/index.html
+++ b/index.html
@@ -3,33 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="C:\Users\killi\projects\run-buddy\assets\css\style.css" />
     </head>
     <body>
         <!-- navigation-->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>a>
+              <a href="/">RUN BUDDY</a>
             </h1>
             <nav>
-                <!-- Unordered list element -->
-                <ul>
-                  <!-- List item element-->
-                  <li>
-                    <!-- Anchor element -->
-                    <a href="#what-we-do">What We Do</a>
-                  </li>
-                  <li>
-                    <a href="#what-you-do">What You Do</a>
-                  </li>
-                  <li>
-                    <a href="#your-trainers">Your Trainers</a>
-                  </li>
-                  <li>
-                    <a href="#reach-out">Reach Out</a>
-                  </li>
-                </ul>
+              <ul>
+                <li>
+                  <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                  <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                  <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                  <a href="#reach-out">Reach Out</a>
+                </li>
+              </ul>
             </nav>
-        </header>
+          </header>
       
         <!-- hero/jumbotron -->
         <section>
