--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="C:\Users\killi\projects\run-buddy\assets\css\style.css" />
+        <link rel="stylesheet" href=".\assets\css\style.css" />
     </head>
     <body>
         <!-- navigation-->
@@ -55,7 +55,13 @@
         
         <!-- footer -->
         <footer>
-            <h2>❤️ Made with love by Run Buddy.</h2>
+            <h2>
+                ❤️ Made with love by Run Buddy.
+            </h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+              </div>
         </footer>
     </body>
 </html>
