style contact info

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach out" class="contact">
+          <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3438.5192572431683!2d-97.7926781491823!3d30.478052031636995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865b32aa1e471687%3A0xd4909cd1a042c818!2s10500%20Lakeline%20Mall%20Dr%2C%20Austin%2C%20TX%2078717!5e0!3m2!1sen!2sus!4v1628836614052!5m2!1sen!2sus"
               width="400" 
